--- a/_includes/body.html
+++ b/_includes/body.html
@@ -1,37 +1,42 @@
 
-<div class="header-wrapper">
-   
-
+<div class="wrapper">
     <div class="header-nav">
       <div class="header-logo">
        <img class="img-logo" src="assets/logo/logo-1.png">
       </div>
 
-      <div class="header-menu"> 
-        <a class="nav-menu menu-1">Home</a>
-        <a class="nav-menu menu-2">About</a>
-        <a class="nav-menu menu-3">Services</a>
-        <a  class="nav-menu rectangle menu-4">Contact</a>
-
+      <nav class="header-menu"> 
+       <h2 class="phone-title">Crafter Digital</h2>
         
-        <!-- <a class="nav-menu grey-font">About</a>
-        <a  class="nav-menu grey-font">Service</a>
-        <a  class="button nav-menu rectangle">Contact</a> --> 
-      </div>
+       <li class="nav-menu">
+         <ul class="list-menu"><a href="">Home</a></ul>
+         <ul class="list-menu"><a href="">About</a></ul>
+         <ul class="list-menu"><a href="">Services</a></ul>
+         <ul class="list-menu rectangle contact-menu"><a class="text-white" href="">Contact</a></ul>
+         <ul class="toggle-menu"><a href=""><i class="fa fa-bars" ></i></a></ul>
+       </li>
+      </nav>
     </div>
 
     <div class="row-1 ">
 
-      <div class="title-row-1 main-title">
-        Crafter Digital
-      </div>
+      <div class="title-row-1">
+        <p class="main-title">
+            Crafter Digital
+        </p>
 
-      <div class="main-desc">
-        <p class="text-desc">Creative agency that is based in Bandung, Indonesia. We have awesome designers and developers that have been working on various mobile and web application UI. </p>
-      </div>
+        <p class="about-us">
+          About Us
+        </p>
 
-      <div class="outer-button button-work">
-        <div class=" p">View Our Work  </div>
+        <div class="main-desc">
+            <p class="text-desc">Creative agency that is based in Bandung, Indonesia. We have awesome designers and developers that have been working on various mobile and web application UI. </p>
+        </div>
+
+        <div class="outer-button button-work">
+            <div class=" p">View Our Work </div>
+        </div>
+        
       </div>
 
       <div class="main-illustration">
@@ -41,77 +46,56 @@
 
     </div>
 
-    <!-- <div class="row-1 ">
+    <div class="first-title">
+      <div class="subtitle-2">
+          WHAT WE DO
+      </div>
+      <div class="title-2"> Provide awesome service for you</div>
+      <div class="box-desc2 text-desc">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae </div>
+    </div>
 
-     <div class="main-illustration">
-       <img class="" src="assets/logo/illustrations.png">
-     </div>
-    </div> -->
 
     <div class="row-2 ">
-      <div class="isi-row2">
-        <div class="subtitle-2">
-           WHAT WE DO
+
+        <div class="box-services">
+          <img class="icon" src="assets/logo/icon-ui.png">
+          <span class="text-services">Craft UI/UX</span>
         </div>
 
-        <div class="title-2"> Provide awesome service for you</div>
-        <div class="box-desc2 text-desc">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae </div>
-
-        <div class="outer-box">
-
-          <div class="box-services b1">
-            <img class="icon" src="assets/logo/icon-ui.png">
-            <div class="text-services">
-              Craft UI/UX
-            </div>
-          </div>
-
-          <div class="box-services b2">
-           <img class="icon" src="assets/logo/icon-ui-extent.png">
-            <div class="text-services">
-              Extent your UI / UX Designer Team
-            </div>
-          </div>
-
-           <div class="box-services b3">
-            <img class="icon" src="assets/logo/icon-web-mantain.png">
-            <div class="text-services">
-              Maintain Existing Ruby on Rails
-            </div>
-          </div>
-
-          <div class="box-services b1">
-            <img class="icon" src="assets/logo/icon-web-extent.png">
-            <div class="text-services">
-              Craft Website & API(Ruby on Rails)
-            </div>
-          </div>
-
-          <div class="box-services b2">
-            <img class="icon" src="assets/logo/icon-web-extent.png">
-            <div class="text-services">
-              Extent your Developer Team
-            </div>
-          </div>
-
-          <div class="box-services b3">
-            <img class="icon" src="assets/logo/icon-web-refactor.png">
-            <div class="text-services">
-              Refactor Existing Ruby Code
-            </div>
-          </div>
-
+        <div class="box-services">
+          <img class="icon" src="assets/logo/icon-ui-extent.png">
+          <span class="text-services">Extent your UI/UX Designer Team</span>
         </div>
-      </div>
+
+          <div class="box-services">
+          <img class="icon" src="assets/logo/icon-web-mantain.png">
+          <span class="text-services"> Maintain Existing Ruby on Rails></span>
+        </div>
+
+        <div class="box-services">
+          <img class="icon" src="assets/logo/icon-web-extent.png">
+          <span class="text-services"> Craft Website & API(Ruby on Rails)</span>
+        </div>
+
+        <div class="box-services">
+          <img class="icon" src="assets/logo/icon-web-extent.png">
+          <span class="text-services">Extent your Developer Team</span>
+        </div>
+
+        <div class="box-services">
+          <img class="icon" src="assets/logo/icon-web-refactor.png">
+          <span class="text-services"> Refactor Existing Ruby Code</span>
+        </div>
+
+    </div>
+
+
+    <div class="row-3-judul">
+        <div class="title-2"> Why Choose Us? </div>
     </div>
 
     <div class="row-3">
-
-      <div class="row-3-judul">
-        <div class="title-2"> Why Choose Us? </div>
-      </div>
-
-      <div class="row-3-1">
+      <div class="child-row-3">
        <div class="box-img">
         <img class="img-choose" src="assets/logo/image.png">
        
@@ -122,7 +106,7 @@
        </div>
       </div>
 
-      <div class="row-3-2">
+      <div class="child-row-3">
         <div class="box-img">
          <img class="img-choose" src="assets/logo/image_2.png">
         
@@ -134,32 +118,26 @@
        </div>
     </div>
 
+    <div class="subtitle-past ">
+        PAST CLIENT
+    </div>
+    <div class="past-client-title-4 title-2"> Lorem ipsum dolor sit.</div>
     <div class="row-4">
-      <div class="rect-row-4">
-       <div class="past-client-box">
-          <div class="subtitle-past">
-              PAST CLIENT
-          </div>
-          <div class="past-client-title-4"> Lorem ipsum dolor sit.</div>
-          <div class="client-logo-box">
-            <img class="client-logo" src="assets/logo/change.png">
-            <img class="client-logo" src="assets/logo/adidas.png">
-            <img class="client-logo" src="assets/logo/pylons.png">
-            <img class="client-logo" src="assets/logo/intel.png">
-            <img class="client-logo" src="assets/logo/fastcom.png">
-          </div>
-        </div> 
+        <img class="client-logo" src="assets/logo/change.png">
+        <img class="client-logo" src="assets/logo/adidas.png">
+        <img class="client-logo" src="assets/logo/pylons.png">
+        <img class="client-logo" src="assets/logo/intel.png">
+        <img class="client-logo" src="assets/logo/fastcom.png">
+    </div>
+
+    <div class="box-text-row5">
+      <div class="subtitle-2 ">
+            WHAT THEY SAY ABOUT US
       </div>
+      <div class="past-client-title title-2"> Clients Testimonials</div>
     </div>
 
     <div class="row-5">
-      <div class="box-text-row5">
-        <div class="subtitle-2">
-              WHAT THEY SAY ABOUT US
-        </div>
-        <div class="past-client-title"> Clients Testimonials</div>
-      </div>
-
       <div class="box-testimonial">
         <div class="card"> 
           <div class="card-1">
@@ -175,10 +153,12 @@
       </div>
     </div>
 
+    <div class="rect-footer-title">
+        <div class="footer-title">Lets work together! <span class="text-style-1"> Contact </span></div>
+    </div> 
+
     <div class="row-footer">
-      <div class="rect-footer-title">
-          <div class="footer-title">Lets work together! <span class="text-style-1"> Contact </span></div>
-      </div> 
+      
       
 
       <div class="rect-footer-full">
@@ -227,7 +207,6 @@
           <div class="box-copyright copyright">  2019 ⓒ Crafter Digital. All rights reserved </div>
         </div>
 
-      
 
       </div>
 
