--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,7 +12,7 @@ $text-blue-color: #19243c;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$background-color: white !default;
 $brand-color:      #2a7ae2 !default;
 $pale-red:         #e54b49 !default;
 
