--- a/_sass/minima/_fonts.scss
+++ b/_sass/minima/_fonts.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,700');
 
+$fa-font-path: "fonts/font-awesome";
 $font-title-color: #19243c;
 $font-color-inactive: #9b9b9b;
+// $phone: "(max-width: 380px)";
+// $desktop: "(min-width: 1000px)"; 
 
 .title {
   width: 379px;
