--- a/_includes/body.html
+++ b/_includes/body.html
@@ -4,10 +4,8 @@
       <div class="header-logo">
        <img class="img-logo" src="assets/logo/logo-1.png">
       </div>
-
       <nav class="header-menu"> 
        <h2 class="phone-title">Crafter Digital</h2>
-        
        <li class="nav-menu">
          <ul class="list-menu"><a href="">Home</a></ul>
          <ul class="list-menu"><a href="">About</a></ul>
@@ -19,31 +17,23 @@
     </div>
 
     <div class="row-1 ">
-
       <div class="title-row-1">
         <p class="main-title">
             Crafter Digital
         </p>
-
         <p class="about-us">
           About Us
         </p>
-
         <div class="main-desc">
             <p class="text-desc">Creative agency that is based in Bandung, Indonesia. We have awesome designers and developers that have been working on various mobile and web application UI. </p>
         </div>
-
         <div class="outer-button button-work">
             <div class=" p">View Our Work </div>
         </div>
-        
       </div>
-
       <div class="main-illustration">
           <img class="" src="assets/logo/illustrations.png">
       </div>
-
-
     </div>
 
     <div class="first-title">
@@ -54,41 +44,32 @@
       <div class="box-desc2 text-desc">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae </div>
     </div>
 
-
     <div class="row-2 ">
-
         <div class="box-services">
           <img class="icon" src="assets/logo/icon-ui.png">
           <span class="text-services">Craft UI/UX</span>
         </div>
-
         <div class="box-services">
           <img class="icon" src="assets/logo/icon-ui-extent.png">
           <span class="text-services">Extent your UI/UX Designer Team</span>
         </div>
-
           <div class="box-services">
           <img class="icon" src="assets/logo/icon-web-mantain.png">
           <span class="text-services"> Maintain Existing Ruby on Rails></span>
         </div>
-
         <div class="box-services">
           <img class="icon" src="assets/logo/icon-web-extent.png">
           <span class="text-services"> Craft Website & API(Ruby on Rails)</span>
         </div>
-
         <div class="box-services">
           <img class="icon" src="assets/logo/icon-web-extent.png">
           <span class="text-services">Extent your Developer Team</span>
         </div>
-
         <div class="box-services">
           <img class="icon" src="assets/logo/icon-web-refactor.png">
           <span class="text-services"> Refactor Existing Ruby Code</span>
         </div>
-
     </div>
-
 
     <div class="row-3-judul">
         <div class="title-2"> Why Choose Us? </div>
@@ -109,7 +90,6 @@
       <div class="child-row-3">
         <div class="box-img">
          <img class="img-choose" src="assets/logo/image_2.png">
-        
         </div>
         <div class="box-desc-choose">
           <div class="reason-title">Experienced Designer</div>
@@ -136,12 +116,10 @@
       </div>
       <div class="past-client-title title-2"> Clients Testimonials</div>
     </div>
-
     <div class="row-5">
       <div class="box-testimonial">
         <div class="card"> 
           <div class="card-1">
-              
             <div class="img-testi">  
              <img class="img-size" src="assets/logo/user.png">
              <div class="text-company">Airbnb.com</div>
@@ -152,27 +130,20 @@
         </div>
       </div>
     </div>
-
     <div class="rect-footer-title">
         <div class="footer-title">Lets work together! <span class="text-style-1"> Contact </span></div>
     </div> 
 
-    <div class="row-footer">
-      
-      
-
+    <!-- <div class="row-footer">
       <div class="rect-footer-full">
-        
         <div class="footer-elements">
           <div class="logo-footer">
             <img class="img-footer" src="assets/logo/logo-1_2@3x.png" />
           </div>
-
           <div class="name-footer">Crafter Digital</div>
           <div class="footer-subtitle fs-1">CONTACT</div>
           <div class="footer-subtitle fs-2">ABOUT US</div>
           <div class="footer-subtitle fs-3">FOLLOW US</div>
-
           <div class="footer-desc desc-column-contact">
             <div class="cb-1">
               <img class="icon-contact" src="assets/logo/icon-location.png" />   <span class="text-footer-desc">467 Boehm Well Apt. 122</span>
@@ -184,7 +155,6 @@
                 <img class="icon-contact" src="assets/logo/icon-envelope.png" />   <span class="text-footer-desc">morgan.roob@gmail.com</span>
             </div>
           </div>
-
           <div class="footer-desc desc-column-about">
               <div class="cb-1">
                 <span class="text-footer-desc">Our Team</span>
@@ -196,21 +166,16 @@
                 <span class="text-footer-desc">Project</span>
               </div>
           </div>
-          
           <div class="follow-us">
               <img class="icon-socmed" src="assets/logo/icon-upwork.png" />   
               <img class="icon-socmed" src="assets/logo/icon-behance.png" />   
               <img class="icon-socmed" src="assets/logo/icon-github-logo.png" />   
               <img class="icon-socmed" src="assets/logo/icon-dribbble.png" />   
           </div>
-
           <div class="box-copyright copyright">  2019 ⓒ Crafter Digital. All rights reserved </div>
         </div>
-
-
       </div>
-
-    </div>
+    </div> -->
 </div>
 
 
