mobile responsive and js for header done

--- a/_includes/body.html
+++ b/_includes/body.html
@@ -1,73 +1,86 @@
+<header class="header-nav">
+    <div class="header-logo">
+        <img class="img-logo" src="assets/logo/logo-1.png">
+    </div>
+    <div class="header-menu">
+        <li class="nav-menu">
+            <ul class="list-menu"><a href="">Home</a></ul>
+            <ul class="list-menu"><a href="">About</a></ul>
+            <ul class="list-menu"><a href="">Services</a></ul>
+            <ul class="list-menu rectangle contact-menu"><a class="text-white" href="">Contact</a></ul>
+        </li>
+
+        <div class="dropdown-menu">
+            <div class="toggle-menu" id="toggle-menu" role="button"><i class="fa fa-bars"></i></div>
+
+            <div id="myDropdown" class="dropdown-content">
+                <li>
+                    <ul>Home</ul>
+                    <ul>About</ul>
+                    <ul>Services</ul>
+                    <ul>Contact</ul>
+                </li>
+            </div>
+
+        </div>
+    </div>
+</header>
 
 <div class="wrapper">
-    <div class="header-nav">
-      <div class="header-logo">
-       <img class="img-logo" src="assets/logo/logo-1.png">
-      </div>
-      <nav class="header-menu"> 
-       <h2 class="phone-title">Crafter Digital</h2>
-       <li class="nav-menu">
-         <ul class="list-menu"><a href="">Home</a></ul>
-         <ul class="list-menu"><a href="">About</a></ul>
-         <ul class="list-menu"><a href="">Services</a></ul>
-         <ul class="list-menu rectangle contact-menu"><a class="text-white" href="">Contact</a></ul>
-         <ul class="toggle-menu"><a href=""><i class="fa fa-bars" ></i></a></ul>
-       </li>
-      </nav>
-    </div>
+
 
     <div class="row-1 ">
-      <div class="title-row-1">
-        <p class="main-title">
-            Crafter Digital
-        </p>
-        <p class="about-us">
-          About Us
-        </p>
-        <div class="main-desc">
-            <p class="text-desc">Creative agency that is based in Bandung, Indonesia. We have awesome designers and developers that have been working on various mobile and web application UI. </p>
+        <div class="title-row-1">
+            <p class="main-title">
+                Crafter Digital
+            </p>
+            <p class="about-us">
+                About Us
+            </p>
+            <div class="main-desc">
+                <p class="text-desc">Creative agency that is based in Bandung, Indonesia. We have awesome designers and developers that have been working on various mobile and web application UI. </p>
+            </div>
+            <div class="outer-button button-work">
+                <div class=" p">View Our Work </div>
+            </div>
         </div>
-        <div class="outer-button button-work">
-            <div class=" p">View Our Work </div>
+        <div class="main-illustration">
+            <img class="" src="assets/logo/illustrations.png">
         </div>
-      </div>
-      <div class="main-illustration">
-          <img class="" src="assets/logo/illustrations.png">
-      </div>
     </div>
 
     <div class="first-title">
-      <div class="subtitle-2">
-          WHAT WE DO
-      </div>
-      <div class="title-2"> Provide awesome service for you</div>
-      <div class="box-desc2 text-desc">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae </div>
+        <div class="subtitle-2">
+            WHAT WE DO
+        </div>
+        <div class="title-2"> Provide awesome service for you</div>
+        <div class="box-desc2 text-desc">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae </div>
     </div>
 
     <div class="row-2 ">
         <div class="box-services">
-          <img class="icon" src="assets/logo/icon-ui.png">
-          <span class="text-services">Craft UI/UX</span>
+            <img class="icon" src="assets/logo/icon-ui.png">
+            <span class="text-services">Craft UI/UX</span>
         </div>
         <div class="box-services">
-          <img class="icon" src="assets/logo/icon-ui-extent.png">
-          <span class="text-services">Extent your UI/UX Designer Team</span>
-        </div>
-          <div class="box-services">
-          <img class="icon" src="assets/logo/icon-web-mantain.png">
-          <span class="text-services"> Maintain Existing Ruby on Rails></span>
+            <img class="icon" src="assets/logo/icon-ui-extent.png">
+            <span class="text-services">Extent your UI/UX Designer Team</span>
         </div>
         <div class="box-services">
-          <img class="icon" src="assets/logo/icon-web-extent.png">
-          <span class="text-services"> Craft Website & API(Ruby on Rails)</span>
+            <img class="icon" src="assets/logo/icon-web-mantain.png">
+            <span class="text-services"> Maintain Existing Ruby on Rails></span>
         </div>
         <div class="box-services">
-          <img class="icon" src="assets/logo/icon-web-extent.png">
-          <span class="text-services">Extent your Developer Team</span>
+            <img class="icon" src="assets/logo/icon-web-extent.png">
+            <span class="text-services"> Craft Website & API(Ruby on Rails)</span>
         </div>
         <div class="box-services">
-          <img class="icon" src="assets/logo/icon-web-refactor.png">
-          <span class="text-services"> Refactor Existing Ruby Code</span>
+            <img class="icon" src="assets/logo/icon-web-extent.png">
+            <span class="text-services">Extent your Developer Team</span>
+        </div>
+        <div class="box-services">
+            <img class="icon" src="assets/logo/icon-web-refactor.png">
+            <span class="text-services"> Refactor Existing Ruby Code</span>
         </div>
     </div>
 
@@ -76,26 +89,26 @@
     </div>
 
     <div class="row-3">
-      <div class="child-row-3">
-       <div class="box-img">
-        <img class="img-choose" src="assets/logo/image.png">
-       
-       </div>
-       <div class="box-desc-choose">
-         <div class="reason-title">Testing with High Coverage</div>
-         <div class="reason-desc">That will help you minimize the risk of errors on you web application. We deliver product on time, well tested, and "well done" culture.</div>
-       </div>
-      </div>
+        <div class="child-row-3">
+            <div class="box-img">
+                <img class="img-choose" src="assets/logo/image.png">
 
-      <div class="child-row-3">
-        <div class="box-img">
-         <img class="img-choose" src="assets/logo/image_2.png">
+            </div>
+            <div class="box-desc-choose">
+                <div class="reason-title">Testing with High Coverage</div>
+                <div class="reason-desc">That will help you minimize the risk of errors on you web application. We deliver product on time, well tested, and "well done" culture.</div>
+            </div>
         </div>
-        <div class="box-desc-choose">
-          <div class="reason-title">Experienced Designer</div>
-          <div class="reason-desc">we deliver Mobile/Website UI design that pleasing users eyes without reducing user good experience when using the product.</div>
+
+        <div class="child-row-3">
+            <div class="box-img">
+                <img class="img-choose" src="assets/logo/image_2.png">
+            </div>
+            <div class="box-desc-choose">
+                <div class="reason-title">Experienced Designer</div>
+                <div class="reason-desc">we deliver Mobile/Website UI design that pleasing users eyes without reducing user good experience when using the product.</div>
+            </div>
         </div>
-       </div>
     </div>
 
     <div class="subtitle-past ">
@@ -111,73 +124,78 @@
     </div>
 
     <div class="box-text-row5">
-      <div class="subtitle-2 ">
+        <div class="subtitle-2 ">
             WHAT THEY SAY ABOUT US
-      </div>
-      <div class="past-client-title title-2"> Clients Testimonials</div>
+        </div>
+        <div class="past-client-title title-2"> Clients Testimonials</div>
     </div>
     <div class="row-5">
-      <div class="box-testimonial">
-        <div class="card"> 
-          <div class="card-1">
-            <div class="img-testi">  
-             <img class="img-size" src="assets/logo/user.png">
-             <div class="text-company">Airbnb.com</div>
-             <div class="text-name">James Hoffman</div>
-             <div class="testi-desc">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam. In imperdiet eros id lacus vestibulum vestibulum.</div>
+        <div class="parent">
+            <div class="child">
+                <img class="img-size" src="assets/logo/user.png">
+                <div class="text-company">Airbnb.com</div>
+                <div class="text-name">James Hoffman</div>
+                <div class="testi-desc">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam. In
+                    imperdiet eros id lacus vestibulum vestibulum.</div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-    <div class="rect-footer-title">
-        <div class="footer-title">Lets work together! <span class="text-style-1"> Contact </span></div>
-    </div> 
 
-    <!-- <div class="row-footer">
-      <div class="rect-footer-full">
-        <div class="footer-elements">
-          <div class="logo-footer">
-            <img class="img-footer" src="assets/logo/logo-1_2@3x.png" />
-          </div>
-          <div class="name-footer">Crafter Digital</div>
-          <div class="footer-subtitle fs-1">CONTACT</div>
-          <div class="footer-subtitle fs-2">ABOUT US</div>
-          <div class="footer-subtitle fs-3">FOLLOW US</div>
-          <div class="footer-desc desc-column-contact">
-            <div class="cb-1">
-              <img class="icon-contact" src="assets/logo/icon-location.png" />   <span class="text-footer-desc">467 Boehm Well Apt. 122</span>
+
+    <div class="row-footer-title">
+        <div class="blue-box">
+            <div class="rect-footer-title">
+                <div class="footer-title">Lets work together! <span class="text-style-1"> Contact </span></div>
             </div>
-            <div class="cb-2">
-              <img class="icon-contact" src="assets/logo/icon-phone.png" />   <span class="text-footer-desc">088-183-9011</span>
+            <div class="row-footer-content">
+                <div class="box-footer-content">
+                    <div class="box-footer" id="box-1">
+                        <div class="box-title">
+                            <img class="img-logo-footer" src="assets/logo/logo-1.png">
+                            <span class="title-footer">Crafter Digital</span>
+                        </div>
+                    </div>
+                    <div class="box-footer" id="box-2">
+                        <span class="title-footer ">CONTACT</span>
+
+                        <div class="list-footer">
+                            <li>
+                                <ul><img class="logo-icon-small" src="assets/logo/icon-location.png">467 Boehm Well Apt. 122</ul>
+                                <ul><img class="logo-icon-small" src="assets/logo/icon-phone.png">088-183-9011</ul>
+                                <ul><img class="logo-icon-small" src="assets/logo/icon-envelope.png">morgan.roob@gmail.com</ul>
+                            </li>
+                        </div>
+                    </div>
+                    <div class="box-footer box-2">
+                        <span class="title-footer ">ABOUT US</span>
+                        <div class="list-footer">
+                            <li>
+                                <ul>Our Team</ul>
+                                <ul>Our Services</ul>
+                                <ul>Projects</ul>
+                            </li>
+                        </div>
+                    </div>
+                    <div class="box-footer box-2">
+                        <span class="title-footer ">FOLLOW US</span>
+                        <div class="list-footer">
+                            <li class="list-icon">
+                                <ul><img class="icon-small" src="assets/logo/icon-upwork.png"> </ul>
+                                <ul> <img class="icon-small" src="assets/logo/icon-behance.png"></ul>
+                                <ul><img class="icon-small" src="assets/logo/icon-github-logo.png"></ul>
+                                <ul> <img class="icon-small" src="assets/logo/icon-dribbble.png"></ul>
+                            </li>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="copyright">
+                    2019 ⓒ Crafter Digital. All rights reserved
+                </div>
             </div>
-            <div class="cb-3">
-                <img class="icon-contact" src="assets/logo/icon-envelope.png" />   <span class="text-footer-desc">morgan.roob@gmail.com</span>
-            </div>
-          </div>
-          <div class="footer-desc desc-column-about">
-              <div class="cb-1">
-                <span class="text-footer-desc">Our Team</span>
-              </div>
-              <div class="cb-2">
-                <span class="text-footer-desc">Our Services</span>
-              </div>
-              <div class="cb-3">
-                <span class="text-footer-desc">Project</span>
-              </div>
-          </div>
-          <div class="follow-us">
-              <img class="icon-socmed" src="assets/logo/icon-upwork.png" />   
-              <img class="icon-socmed" src="assets/logo/icon-behance.png" />   
-              <img class="icon-socmed" src="assets/logo/icon-github-logo.png" />   
-              <img class="icon-socmed" src="assets/logo/icon-dribbble.png" />   
-          </div>
-          <div class="box-copyright copyright">  2019 ⓒ Crafter Digital. All rights reserved </div>
         </div>
-      </div>
-    </div> -->
+    </div>
+
 </div>
-
-
-
-
