--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  
+  <script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="/assets/javascript/header.js"></script>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
